--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/banco_de_dados
@@ -12,3 +13,7 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8081
+
+spring.security.user.name=admin
+spring.security.user.password=root
+spring.security.user.roles=USERS
